# omega-hedge-fund

./: .gitignore  ARCHITECTURE.md  AUDIT.md  README.md  SETUP.md  WHITEPAPER.md  docker-compose.yml  pyproject.toml  requirements.txt
omega/: __init__.py  autopilot.py  orchestrator.py  rl_environment.py
omega/alpha_swarm/: __init__.py  base.py  contrarian_agent.py  debate_chamber.py  llm_macro_agent.py  micro_alpha.py  ppo_agent.py  stat_arb_agent.py  swarm.py
omega/breakthroughs/: __init__.py  adaptive_risk.py  bridge_tracker.py  btc_dominance.py  cascade_predictor.py  correlation_breakdown.py  cross_venue_arb.py  defi_yield.py  depeg_alert.py  economic_calendar.py  exchange_reserves.py  flash_crash_scanner.py  funding_forecast.py  gamma_signal.py  mempool_monitor.py  multi_timeframe.py  portfolio_optimizer.py  sentiment_nlp.py  smart_money.py  stablecoin_flow.py  stress_index.py  time_of_day.py  toxic_flow.py  vol_forecast.py  volume_profile.py  whale_tracker.py
omega/cli/: __init__.py  app.py  keys.py  profiles_cli.py
omega/config/: __init__.py  exchanges.py  keystore.py  profiles.py  settings.py
omega/crowd_engine/: __init__.py  engine.py  optimizer.py
omega/data_nexus/: __init__.py  base.py  binance_feed.py  etherscan_feed.py  kafka_bus.py  macro_feed.py  multi_venue.py  news_feed.py  nexus.py  okx_feed.py  vector_store.py
omega/execution/: __init__.py  algorithms.py  base.py  binance_executor.py  blade.py  execution_rl.py  okx_executor.py  sor.py  venue.py  wallet_manager.py
omega/meta_cognition/: __init__.py  genetic_optimizer.py  meta.py  (+2 more)
scripts/: __init__.py  backtest.py  dashboard.py  download_okx_history.py  gen_synthetic_data.py  generate_whitepaper.py  live_trade.py  train_ppo.py
tests/: test_crowd_engine.py  test_microstructure.py  test_okx.py  test_regression.py  test_smoke.py
(+27 files in other folders)
