[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omega-hedge-fund"
version = "1.0.0"
description = "OMEGA — Autonomous Multi-Modal AI Hedge Fund Entity"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "OMEGA Quantitative Research" },
]
keywords = ["trading", "ai", "hedge-fund", "reinforcement-learning", "ppo", "kafka", "crypto", "binance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "numpy>=1.26,<3.0",
    "pandas>=2.2,<3.0",
    "scipy>=1.11,<2.0",
    "aiohttp>=3.9,<4.0",
    "websockets>=12.0,<17.0",
    "torch>=2.2,<3.0",
    "scikit-learn>=1.4,<2.0",
    "statsmodels>=0.14,<1.0",
    "hmmlearn>=0.3,<1.0",
]

[project.optional-dependencies]
kafka = ["confluent-kafka>=2.3,<3.0"]
milvus = ["pymilvus>=2.4,<3.0"]
prod = [
    "confluent-kafka>=2.3,<3.0",
    "pymilvus>=2.4,<3.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "mypy>=1.8",
    "ruff>=0.3",
]

[project.scripts]
omega-train = "scripts.train_ppo:main"
omega-live = "scripts.live_trade:run"
omega-backtest = "scripts.backtest:main"

[tool.setuptools.packages.find]
include = ["omega*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
